# pdf-to-docx

./: .gitignore  Makefile  README.md  cli.py  main.py  pdf2docx.py  pyproject.toml  requirements_xpu.txt  test.ipynb  test.py
batch/script/: pdf_batch.py
pdf_to_docx/: main.py
pdf_to_docx/ocr/: processor.py
pdf_to_docx/parsing/: text_cleaner.py
pdf_to_docx/pipeline/: md2docx.py  mdconvert.py  txt2md.py
pdf_to_docx/utils/device_tools/: device.py
pdf_to_docx/utils/geometry_tools/: geometry.py
pdf_to_docx/utils/io_tools/: docx_mover.py  generate_paths.py  json_reader.py  make_output_dirs.py
pdf_to_docx/utils/logging_tools/: logger.py  print_stat.py  progress_bar.py
pdf_to_docx/utils/text_tools/: format_size.py  roman_conveter.py  text_patterns.py
pdf_to_docx/utils/time_tools/: convert_hhmmss.py  generate_timestamp.py  measure_time.py  timestamp.py
pdf_to_docx/utils/validation/: valid_pdf.py
tests/: test_utils.py
